--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "apollo-boost": "^0.4.7",
+    "detect-browser": "^5.0.0",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
     "grommet": "^2.10.0",
