--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
   ],
   "rules": {
     "jsx-quotes": "off",
-    "react/no-array-index-key": "off"
+    "react/no-array-index-key": "off",
+    "newline-after-var": "off"
   }
 }
