--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "index.html",
+  "start_url": "https://timesheet-calculator.netlify.com/",
   "display": "standalone",
   "theme_color": "#1e80b5",
   "background_color": "#ffffff"
